--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aliquid cumque, quibusdam ab harum autem
+        reprehenderit beatae aperiam laborum aspernatur odit incidunt odio adipisci nesciunt quia repellendus neque
+        exercitationem explicabo!</p>
 </body>
 
 </html>
